--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(ProjectEuler LANGUAGES C CXX)
 
 include(cmake/all.cmake)
 
+find_package(range-v3 REQUIRED)
 find_package(MyMathLib REQUIRED)
 
 file(GLOB sources ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp  ${CMAKE_CURRENT_SOURCE_DIR}/src/*.c)
@@ -11,4 +12,5 @@ foreach(source ${sources})
   get_filename_component(prog ${source} NAME_WE)
   add_executable(${prog} ${source})
   target_link_libraries(${prog} PRIVATE MyMathLib)
+  target_link_libraries(${prog} PRIVATE range-v3)
 endforeach()
