--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ file(GLOB sources ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp  ${CMAKE_CURRENT_SOURCE_
 foreach(source ${sources})
   get_filename_component(prog ${source} NAME_WE)
   add_executable(${prog} ${source})
+  target_compile_definitions(${prog} PRIVATE "DATA_DIR=\"${CMAKE_CURRENT_SOURCE_DIR}/data\"")
   target_link_libraries(${prog} PRIVATE MyMathLib)
   target_link_libraries(${prog} PRIVATE range-v3)
 endforeach()
